--- a/.config/nvim/dein/plugins_lazy.toml
+++ b/.config/nvim/dein/plugins_lazy.toml
@@ -17,3 +17,13 @@ repo = 'Shougo/unite.vim'
 [[plugins]]
 repo = 'Shougo/neomru.vim'
 on_source = ['unite.vim']
+
+[[plugins]]
+repo = 'fatih/vim-go'
+on_ft = ['go']
+
+[[plugins]]
+repo = 'Shougo/vimfiler.vim'
+depends = 'unite.vim'
+on_map = '<Plug>'
+on_path = '.*'
