when improving the format/structure of the code

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,7 +35,7 @@ set-option -g status-right-length 90
 set-option -g status-utf8 on
 
 # 左側表示
-set-option -g status-left "tmux:[#P] #(tmux show-options -g prefix)"
+set-option -g status-left "tmux:(#P) [#(tmux show-options -g prefix)]"
 # 右側表示 ( Wi-Fi・バッテリー残量(バッテリー関係の時間)・現在時刻 )
 set-option -g status-right "#[fg=white]#(wifi)#[default] #(battery --tmux)(#(battery --remain)) [%Y-%m-%d(%a) %H:%M]"
 
