--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,75 +3,46 @@ set-window-option -g mode-keys vi
 
 set-option -s escape-time 0
 
-set-option -g allow-rename off # Keep the window's name fixed
+# Keep the window's name fixed
+set-option -g allow-rename off
 
 # コンソールの表示名設定
 set-option -g set-titles on
 set-option -g set-titles-string "[tmux] #T @ #H"
 
-# ペイン・ウィンドウ {{{1
+# マウス操作を有効にする
+set-option -g mouse on
 
+# ペイン・ウィンドウ {{{
 
-set-option -g history-limit 10000 # ウィンドウ履歴の最大行数
+# ウィンドウ履歴の最大行数
+set-option -g history-limit 10000
 
 # ウィンドウとペインの番号を1から開始する（デフォルト0）
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+# }}} 
+# ステータスバー {{{
 
-# }}} マウス設定 {{{1
-
-
-set-option -g mouse on # マウス操作を有効にする
-
-
-# }}} ステータスバー {{{1
-
-set-option -g status-interval 1
-set-option -g status-justify centre
-set-option -g status-left-length 90
-set-option -g status-position top
-set-option -g status-right-length 90
 set-option -g status-utf8 on
+# ステータスバーを上部に表示する
+set-option -g status-position top
+# リフレッシュの間隔を設定する
+set-option -g status-interval 1
+# ウィンドウリストの位置を中央寄せ
+set-option -g status-justify centre
 
 # 左側表示
-set-option -g status-left "tmux:(#P) [#(tmux show-options -g prefix)]"
-# 右側表示 ( Wi-Fi・バッテリー残量(バッテリー関係の時間)・現在時刻 )
+set-option -g status-left-length 90
+set-option -g status-left "[tmux:#P] [#(tmux show-options -g prefix)]"
+
+# 右側表示
+set-option -g status-right-length 90
 set-option -g status-right "#[fg=white]#(wifi)#[default] [#(battery --tmux)(#(battery --remain))] [%Y-%m-%d(%a) %H:%M]"
 
-
-# }}} カラースキーム (Solarized 256) {{{1
-
-set-option -g default-terminal "screen-256color"
-set-option -g pane-active-border-bg colour235
-
-## https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-set-option -g status-bg colour235
-set-option -g status-fg colour136
-set-option -g status-attr default
-
-set-window-option -g window-status-fg colour244
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-set-window-option -g window-status-current-fg colour166
-set-window-option -g window-status-current-bg default
-
-set-option -g pane-border-fg colour235
-set-option -g pane-active-border-fg colour240
-
-set-option -g message-bg colour235
-set-option -g message-fg colour166
-
-set-option -g display-panes-active-colour colour33
-set-option -g display-panes-colour colour166
-
-set-window-option -g clock-mode-colour colour64
-
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160
-
-# }}} キーバインド {{{1 
-
+# }}}
+# キーバインド {{{ 
 
 # Prefixキーを変更
 unbind-key C-b
@@ -81,7 +52,7 @@ bind-key C-t send-prefix
 # コピーモード
 # Prefix+v でコピーモード開始
 bind-key v copy-mode \; display "Copy mode!"
-#bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy v begin-selection
 
 # Prefix+Enter/y でコピー
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
@@ -108,12 +79,52 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
-bind r source-file ~/.tmux.conf \; display "Reloaded!"   #設定ファイルをリロードする
+#設定ファイルをリロードする
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-bind-key -r C-h select-window -t :-   # Prefix + Ctrl-h,h,h,h,...と連打できる
-bind-key -r C-l select-window -t :+    # Prefix + Ctrl-h/l でウィンドウ切り替え
+# Prefix + Ctrl-h,h,h,h,...と連打できる
+bind-key -r C-h select-window -t :-
+# Prefix + Ctrl-h/l でウィンドウ切り替え
+bind-key -r C-l select-window -t :+
 
-bind - split-window -v # - でペインを横分割する
-bind | split-window -h # | でペインを縦分割する
+# - でペインを横分割する
+bind - split-window -v
+# | でペインを縦分割する
+bind | split-window -h
 
+# }}}
+# COLOUR (Solarized 256) {{{
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
+
+# bell
+set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
 # }}}
