--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -1,33 +1,70 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
-[[plugins]]
-repo  = 'Shougo/vimproc.vim'
-build = 'make'
+# ---
 
+# Haml
 [[plugins]]
-repo = 'itchyny/lightline.vim'
+repo  = 'tpope/vim-haml'
+on_ft = 'haml'
 
+# Html5
 [[plugins]]
-repo = 'mattn/emmet-vim'
+repo  = 'othree/html5.vim'
+on_ft = 'html'
 
+# Toml
 [[plugins]]
 repo  = 'cespare/vim-toml'
 on_ft = 'toml'
 
+# Markdown
 [[plugins]]
-repo  = 'rcmdnk/vim-markdown'
-on_ft = ['markdown', 'mkd']
+repo = 'rcmdnk/vim-markdown'
+on_ft = ['markdown','mkd']
+hook_add = '''
+  let g:vim_markdown_frontmatter = 1
+  let g:vim_markdown_math = 1
+'''
+
+# Golang
+[[plugins]]
+repo = 'fatih/vim-go'
+on_ft = 'go'
 
 # Japanese doc
 [[plugins]]
-repo  = 'vim-jp/vimdoc-ja'
+repo = 'vim-jp/vimdoc-ja'
 on_ft = 'help'
 
-# カラースキーマ
+# ---
 
+# hybrid
+[[plugins]]
+repo = 'w0ng/vim-hybrid'
+
+# solarized
 [[plugins]]
 repo = 'altercation/vim-colors-solarized'
 
 [[plugins]]
-repo = 'w0ng/vim-hybrid'
+repo = 'colepeters/vim-hybrid-material'
+
+# ---
+
+# ステータスライン
+[[plugins]]
+repo = 'itchyny/lightline.vim'
+hook_add = '''
+  let g:lightline = { 'colorscheme': 'wombat' }
+'''
+
+[[plugins]]
+repo = 'tyru/open-browser.vim'
+hook_add = '''
+  let g:openbrowser_menu_lang = 'ja'
+'''
+
+[[plugins]]
+repo = 'tell-k/vim-browsereload-mac'
+if = 'has("mac")'
