--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,14 +35,14 @@ set-option -g status-justify centre
 
 # 左側表示
 set-option -g status-left-length 90
-set-option -g status-left "[tmux:#P] [#(tmux show-options -g prefix)]"
+set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | #[fg=white]#(wifi)#[default]"
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]#(wifi)#[default] [#(battery --tmux)(#(battery --remain))] [%Y-%m-%d(%a) %H:%M]"
+set-option -g status-right "CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %Y-%m-%d(%a) %H:%M]"
 
 # }}}
-# キーバインド {{{ 
+# Keybindings {{{ 
 
 # Prefixキーを変更
 unbind-key C-b
@@ -93,38 +93,16 @@ bind - split-window -v
 bind | split-window -h
 
 # }}}
-# COLOUR (Solarized 256) {{{
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
+# Tmux Plugin Manager {{{
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_CACHE_HOME/tmux/"
+set -g @plugin 'tmux-plugins/tpm'
 
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+# Plugin Seting
+set -g @colors-solarized '256'
 
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
-
-# bell
-set-window-option -g window-status-bell-style fg=colour235,bg=colour160 #base02, red
+run '~/.cache/tmux/tpm/tpm'
 # }}}
