--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | #[fg=white
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %Y-%m-%d(%a) %H:%M]"
+set-option -g status-right "CPU: #{cpu_icon} #{cpu_percentage} | Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %Y-%m-%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{ 
