Fixed a fine place

--- a/.config/git/config
+++ b/.config/git/config
@@ -4,7 +4,7 @@
     preloadindex = true
 [user]
     email = email@ress997.me
-    name = ress997
+    name = 39e
 [alias]
     p = push
     br = branch
