Change Git user.name

--- a/.config/git/config
+++ b/.config/git/config
@@ -4,7 +4,7 @@
     preloadindex = true
 [user]
     email = email@ress997.me
-    name = 39e
+    name = Aoi Tachibana
 [alias]
     p = push
     br = branch
