:diamond_shape_with_a_dot_inside: when improving the format/structure of the code

--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -1,25 +1,21 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
 
-# Lang {{{
+# Lang
 
-# Haml
-[[plugins]]
+[[plugins]] # Haml
 repo  = 'tpope/vim-haml'
 on_ft = 'haml'
 
-# Html5
-[[plugins]]
+[[plugins]] # Html5
 repo  = 'othree/html5.vim'
 on_ft = 'html'
 
-# Toml
-[[plugins]]
+[[plugins]] # Toml
 repo  = 'cespare/vim-toml'
 on_ft = 'toml'
 
-# Markdown
-[[plugins]]
+[[plugins]] # Markdown
 repo = 'rcmdnk/vim-markdown'
 on_ft = ['markdown','mkd']
 hook_add = '''
@@ -27,44 +23,37 @@ hook_add = '''
   let g:vim_markdown_math = 1
 '''
 
-# Golang
-[[plugins]]
+[[plugins]] # Golang
 repo = 'fatih/vim-go'
 on_ft = 'go'
 
-# TMUX
-[[plugins]]
+[[plugins]] # TMUX
 repo = 'tmux-plugins/vim-tmux'
 on_ft = 'tmux'
 
-# Japanese doc
-[[plugins]]
+[[plugins]] # Japanese doc
 repo = 'vim-jp/vimdoc-ja'
 on_ft = 'help'
 
-# }}}
-# Colors {{{
+# Colors
 
-# hybrid
-[[plugins]]
+[[plugins]] # hybrid
 repo = 'w0ng/vim-hybrid'
 
-# solarized
-[[plugins]]
+[[plugins]] # solarized
 repo = 'altercation/vim-colors-solarized'
 
-[[plugins]]
-repo = 'colepeters/vim-hybrid-material'
-
-# }}}
 # ---
 
-# ステータスライン
-[[plugins]]
+[[plugins]] # ステータスライン
 repo = 'itchyny/lightline.vim'
 hook_add = '''
-  let g:lightline = { 'colorscheme': 'wombat' }
+  let g:lightline = { 
+  \   'colorscheme': 'wombat'
+  \ }
 '''
+
+# Test
 
 [[plugins]]
 repo = 'tyru/open-browser.vim'
@@ -75,35 +64,3 @@ hook_add = '''
 [[plugins]]
 repo = 'tell-k/vim-browsereload-mac'
 if = 'has("mac")'
-
-# ---
-
-[[plugins]]
-repo = 'Shougo/neomru.vim'
-on_path = '.*'
-
-[[plugins]]
-repo = 'Shougo/unite.vim'
-depends = 'neomru.vim'
-hook_add = '''
-  if executable('pt')
-    let g:unite_source_grep_command = 'pt'
-    let g:unite_source_grep_default_opts = '--nogroup --nocolor'
-    let g:unite_source_grep_recursive_opt = ''
-  endif
-'''
-
-[[plugins]]
-repo = 'Shougo/vimfiler.vim'
-depends = 'unite.vim'
-hook_add = '''
-  let g:vimfiler_as_default_explorer=1
-  let g:vimfiler_safe_mode_by_default = 0
-  " Like Textmate icons.
-  let g:vimfiler_tree_leaf_icon = ' '
-  let g:vimfiler_tree_opened_icon = '▾'
-  let g:vimfiler_tree_closed_icon = '▸'
-  let g:vimfiler_file_icon = '-'
-  let g:vimfiler_marked_file_icon = '*'
-  nnoremap <C-X>f :<C-u>VimFiler -split -simple -winwidth=35 -no-quit<CR>
-'''
