--- a/.config/dein/plugins_lazy.toml
+++ b/.config/dein/plugins_lazy.toml
@@ -3,42 +3,26 @@ repo = 'junegunn/fzf'
 if = 'executable("fzf")'
 on_cmd = ['FZF','fzf#run']
 
-[[plugins]]
-repo = 'junegunn/fzf.vim'
-depends = 'fzf'
-on_cmd = ['FzfColors','FzfFiles','FzfGitFiles','FzfHistory']
-hook_add = '''
-  " 各コマンド先頭につける (e.g. FzfFiles)
-  let g:fzf_command_prefix = 'Fzf'
-  " <C-f>c => FzfColors
-  nnoremap <C-f>c :<C-u>FzfColors<CR>
-  " <C-f>f => FzfFiles
-  nnoremap <C-f>f :<C-u>FzfFiles<CR>
-  " <C-f>g => FzfGitFiles
-  nnoremap <C-f>g :<C-u>FzfGitFiles<CR>
-'''
-
-# 補完
-[[plugins]]
+[[plugins]] # 補完
 repo = 'Shougo/deoplete.nvim'
 if = 'has("nvim")'
 on_i = 1
 hook_add = '''
-  let g:deoplete#enable_at_startup = 1
   " <TAB> で補完を選択
   inoremap <silent><expr> <Tab> pumvisible() ? "\<C-n>" : deoplete#mappings#manual_complete()
 '''
+hook_source = '''
+  let g:deoplete#enable_at_startup = 1
+'''
 
-# Codic
-[[plugins]]
+[[plugins]] # Codic
 repo = 'koron/codic-vim'
 on_cmd = 'Codic'
 
-# Emmet
-[[plugins]]
+[[plugins]] # Emmet
 repo = 'mattn/emmet-vim'
 on_i = 1
-hook_add = '''
+hook_source = '''
   let g:user_emmet_mode = 'i'
   let g:user_emmet_leader_key='<C-E>'
   let g:use_emmet_complete_tag = 1
@@ -50,16 +34,10 @@ hook_add = '''
   \ }
 '''
 
-# EditorConfig
-[[plugins]]
+[[plugins]] # EditorConfig
 repo = 'editorconfig/editorconfig-vim'
 on_path = '.*'
 
-[[plugins]]
-repo = 'tpope/vim-surround'
-on_path = '.*'
-
-# Git
-[[plugins]]
+[[plugins]] # Git
 repo = 'tpope/vim-fugitive'
 on_cmd = ['Gwrite','Gcommit','Gread','Gstatus','Gdiff','Gblame']
