--- a/.config/git/config
+++ b/.config/git/config
@@ -3,32 +3,36 @@
     excludesfile = ~/.config/git/ignore
     preloadindex = true
 [user]
-    email = email@ress997.me
+    email = email@ress997.com
     name = Aoi Tachibana
+# ---
 [alias]
     p = push
     br = branch
     cm = commit
     co = checkout
     st = status
+    # ---
     last = log -1 HEAD
     lg = log --graph --pretty=format:'%Cblue%h%Creset [%ar] %C(yellow)%an%Creset %C(auto)%d%Creset %s'
 [color]
     ui = true
-[commit]
-    template = ~/.config/git/message.txt
 [credential]
     helper = osxkeychain
+# ---
+[commit]
+    template = ~/.config/git/message.txt
 [diff]
     algorithm = histogram
     tool = vimdiff
-[ghq]
-    root = ~/.dev/ghq
-[help]
-    autocorrect = 1
-[hub]
-    protocol = https
+[merge]
+    ff = false
 [push]
     default = current
-[web]
-    browser = open
+[help]
+    autocorrect = 1
+# ---
+[ghq]
+    root = ~/.dev/ghq
+[hub]
+    protocol = https
