--- a/.tmux.conf
+++ b/.tmux.conf
@@ -39,7 +39,7 @@ set-option -g status-left "tmux:#P | #(tmux show-options -g prefix) | #[fg=white
 
 # 右側表示
 set-option -g status-right-length 90
-set-option -g status-right "#[fg=white]Battery#[default] #(battery -t -m -r) | CPU: #{cpu_icon} #{cpu_percentage} | %Y-%m-%d(%a) %H:%M"
+set-option -g status-right "#[fg=white]Battery:#[default] #(battery -t -m -r) | CPU: #{cpu_icon} #{cpu_percentage} | %m/%d(%a) %H:%M"
 
 # }}}
 # Keybindings {{{ 
