--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -1,122 +1,159 @@
 [[plugins]]
 repo = 'Shougo/dein.vim'
-
-# Colors
-
-[[plugins]]
-repo = 'w0ng/vim-hybrid'
-on_event = ['VimEnter']
 hook_add = '''
-    " let g:hybrid_custom_term_colors = 1
-    " let g:hybrid_reduced_contrast = 1
-    set background=dark
-'''
-hook_post_source = '''
-    colorscheme hybrid
+if has('mac') && executable('osascript')
+  let g:dein#enable_notification = 1
+endif
 '''
 
-# Lang
-
-[[plugins]] # Markdown
-repo = 'rcmdnk/vim-markdown'
-hook_add = '''
-    let g:vim_markdown_frontmatter = 1
-    let g:vim_markdown_math = 1
-'''
-
-[[plugins]] # Toml
-repo  = 'cespare/vim-toml'
-
-[[plugins]] # Golang
-repo = 'fatih/vim-go'
-
-[[plugins]] # TMUX
-repo = 'tmux-plugins/vim-tmux'
-
-[[plugins]] # Html5
-repo  = 'othree/html5.vim'
-
-[[plugins]] # Haml
-repo  = 'tpope/vim-haml'
-
-[[plugins]] # Japanese doc
-repo = 'vim-jp/vimdoc-ja'
-hook_add = '''
-    " Help の言語を設定
-    set helplang=ja,en
-'''
-
-# Status line
-
-[[plugins]]
-repo = 'itchyny/lightline.vim'
-on_event = ['VimEnter']
-hook_add = '''
-    let g:lightline = {'colorscheme': 'wombat'}
-'''
-hook_post_source = '''
-    call lightline#colorscheme()
-'''
-
-# 補完
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = 'has("nvim")'
-on_i = 1
-hook_source = '''
-    let g:deoplete#enable_at_startup = 1
-    let g:deoplete#enable_smart_case = 1
-'''
-
-# fzf
-[[plugins]]
-repo = 'junegunn/fzf'
-if = 'executable("fzf")'
-on_cmd = ['FZF','fzf#run']
-
-# EditorConfig
-[[plugins]]
-repo = 'editorconfig/editorconfig-vim'
-on_path = '.*'
-
-# Emmet
-[[plugins]]
-repo = 'mattn/emmet-vim'
-on_i = 1
-hook_source = '''
-    let g:user_emmet_mode = 'i'
-    let g:user_emmet_leader_key='<C-E>'
-    let g:use_emmet_complete_tag = 1
-    let g:user_emmet_settings = {
-    \   'variables': {
-    \     'lang': "ja"
-    \   },
-    \   'indentation': '    '
-    \ }
-'''
-
-# Codic
-[[plugins]]
-repo = 'koron/codic-vim'
-on_cmd = 'Codic'
-
-# Test {{{
-
-[[plugins]]
-repo = 'tyru/open-browser.vim'
-hook_add = '''
-    let g:openbrowser_menu_lang = 'ja'
-'''
-
-[[plugins]]
-repo = 'tell-k/vim-browsereload-mac'
-if = 'has("mac")'
+# Library {{{
 
 [[plugins]]
 repo = 'Shougo/context_filetype.vim'
 
 [[plugins]]
+repo = 'vim-jp/vital.vim'
+
+# }}}
+
+[[plugins]]
 repo = 'osyo-manga/vim-precious'
 depends = ['context_filetype.vim']
+
+[[plugins]] # 補完
+repo = 'Shougo/deoplete.nvim'
+if = 'has("nvim")'
+depends = ['context_filetype.vim']
+on_i = 1
+hook_source = '''
+  let g:deoplete#enable_at_startup = 1
+  let g:deoplete#enable_smart_case = 1
+'''
+
+[[plugins]] # Auto Close (括弧)
+repo = 'Townk/vim-autoclose'
+
+[[plugins]] # Status line
+repo = 'itchyny/lightline.vim'
+on_event = ['VimEnter']
+hook_add = '''
+  let g:lightline = {'colorscheme': 'wombat'}
+'''
+hook_post_source = '''
+  call lightline#colorscheme()
+'''
+
+[[plugins]] # Git
+repo = 'cohama/agit.vim'
+on_cmd = ['Agit','AgitFile']
+
+[[plugins]] # EditorConfig
+repo = 'editorconfig/editorconfig-vim'
+on_path = '.*'
+
+[[plugins]] # Emmet
+repo = 'mattn/emmet-vim'
+on_i = 1
+hook_source = '''
+  let g:user_emmet_mode = 'i'
+  let g:user_emmet_leader_key='<C-E>'
+  let g:use_emmet_complete_tag = 1
+  let g:user_emmet_settings = {
+  \   'variables': {
+  \     'lang': "ja"
+  \   },
+  \   'indentation': '    '
+  \ }
+'''
+
+[[plugins]]
+repo = 'tyru/open-browser.vim'
+hook_add = '''
+  let g:openbrowser_menu_lang = 'ja'
+'''
+
+[[plugins]]
+repo = 'tyru/open-browser-github.vim'
+depends = ['open-browser.vim']
+on_cmd = ['OpenGithubFile','OpenGithubIssue','OpenGithubPullReq']
+hook_add = '''
+  nnoremap go :<C-u>OpenGithubFile<CR>
+  xnoremap go :OpenGithubFile<CR>
+'''
+
+[[plugins]] # Markdown Preview
+repo = 'kannokanno/previm'
+depends = ['open-browser.vim']
+on_cmd = ['PrevimOpen']
+
+[[plugins]] # 選択インターフェース
+repo = 'junegunn/fzf'
+if = 'executable("fzf")'
+on_cmd = ['FZF','fzf#run']
+
+[[plugins]] # Codic
+repo = 'koron/codic-vim'
+on_cmd = 'Codic'
+
+# Colors {{{
+
+[[plugins]] # hybrid
+repo = 'w0ng/vim-hybrid'
+hook_add = '''
+  " let g:hybrid_custom_term_colors = 1
+  " let g:hybrid_reduced_contrast = 1
+'''
+
+[[plugins]] # molokai
+repo = 'tomasr/molokai'
+hook_add = '''
+  " let g:molokai_original = 1
+  " let g:rehash256 = 1
+'''
+
+# }}}
+# Lang {{{ 
+
+[[plugins]] # Golang
+repo = 'fatih/vim-go'
+
+[[plugins]] # Haml
+repo  = 'tpope/vim-haml'
+
+[[plugins]] # Html5
+repo  = 'othree/html5.vim'
+
+[[plugins]] # Markdown
+repo = 'rcmdnk/vim-markdown'
+hook_add = '''
+  let g:vim_markdown_frontmatter = 1
+  let g:vim_markdown_math = 1
+'''
+
+[[plugins]] # TMUX
+repo = 'tmux-plugins/vim-tmux'
+
+[[plugins]] # Toml
+repo  = 'cespare/vim-toml'
+
+[[plugins]] # TypeScript
+repo = 'leafgarland/typescript-vim'
+
+[[plugins]] # Japanese doc
+repo = 'vim-jp/vimdoc-ja'
+hook_add = '''
+  " Help の言語を設定
+  set helplang=ja,en
+'''
+# }}}
+# Test {{{
+
+[[plugins]]
+repo = 'tpope/vim-surround'
+
+[[plugins]]
+repo = 'haya14busa/dein-command.vim'
+depends = ['dein.vim','vital.vim']
+on_cmd = ['Dein']
 
 # }}}
