キャッシュオプションを有効化

--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -31,8 +31,6 @@ hook_source = '''
     let g:deoplete#enable_at_startup = 1
     let g:deoplete#enable_smart_case = 1
 
-    " ---
-
     " <TAB>: completion.
     imap <silent><expr> <TAB> pumvisible() ? "\<C-n>" : <SID>check_back_space() ? "\<TAB>" : deoplete#mappings#manual_complete()
     function! s:check_back_space() abort
@@ -50,6 +48,7 @@ depends = ['deoplete.nvim']
 on_ft = ['go']
 build = 'make'
 hook_source = '''
+    let g:deoplete#sources#go#use_cache = 1
     let g:deoplete#sources#go#gocode_binary = $GOPATH . '/bin/gocode'
     let g:deoplete#sources#go#sort_class = ['package', 'func', 'type', 'var', 'const']
 '''
