--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -20,7 +20,13 @@ repo = 'vim-jp/vital.vim'
 repo = 'osyo-manga/vim-precious'
 depends = ['context_filetype.vim']
 
-[[plugins]] # 補完
+# 補完 {{{
+
+[[plugins]]
+repo = 'Shougo/neocomplete.vim'
+if = 'has("lua")'
+
+[[plugins]]
 repo = 'Shougo/deoplete.nvim'
 if = 'has("nvim")'
 depends = ['context_filetype.vim']
@@ -41,12 +47,12 @@ hook_source = '''
 '''
 hook_post_update = 'UpdateRemotePlugins'
 
+# }}}
+
 [[plugins]] # Auto Close (括弧)
 repo = 'jiangmiao/auto-pairs'
 on_i = 1
-hook_post_source = '''
-    call AutoPairsTryInit()
-'''
+hook_post_source = 'call AutoPairsTryInit()'
 
 [[plugins]] # Auto save
 repo ='907th/vim-auto-save'
@@ -56,9 +62,7 @@ hook_source = '''
     let g:auto_save_in_insert_mode = 0  " インサートモードで自動保存 OFF
     let g:auto_save_silent = 1          " メッセージを表示しない
 '''
-hook_post_source = '''
-    call AutoSave()
-'''
+hook_post_source = 'call AutoSave()'
 
 [[plugins]] # Status line
 repo = 'itchyny/lightline.vim'
@@ -66,9 +70,7 @@ on_event = ['VimEnter']
 hook_source = '''
     let g:lightline = {'colorscheme': 'wombat'}
 '''
-hook_post_source = '''
-    call lightline#colorscheme()
-'''
+hook_post_source = 'call lightline#colorscheme()'
 
 [[plugins]] # EditorConfig
 repo = 'editorconfig/editorconfig-vim'
@@ -131,7 +133,7 @@ hook_source = '''
 '''
 
 ## }}}
-## html {{{
+## HTML {{{
 
 [[plugins]] # Haml
 repo  = 'tpope/vim-haml'
@@ -140,10 +142,21 @@ repo  = 'tpope/vim-haml'
 repo  = 'othree/html5.vim'
 
 ## }}}
+## css {{{
+
+[[plugins]] # css3
+repo = 'hail2u/vim-css3-syntax'
+
+## }}}
 ## JavaScript {{{
+
+[[plugins]]
+repo = 'kchmck/vim-coffee-script'
+on_ft = ['coffee']
 
 [[plugins]] # TypeScript
 repo = 'leafgarland/typescript-vim'
+on_ft = ['typescript']
 
 ## }}}
 ## Markdown {{{
@@ -163,6 +176,10 @@ on_cmd = ['PrevimOpen']
 
 ## }}}
 ## Vim {{{
+
+[[plugins]]
+repo = 'vim-jp/syntax-vim-ex'
+on_ft = ['vim']
 
 [[plugins]]
 repo = 'Shougo/neco-vim'
