--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -98,6 +98,11 @@ hook_post_source = 'call AutoSave()'
 [[plugins]]
 repo = 'airblade/vim-gitgutter'
 on_path = '.*'
+hook_source = '''
+    let g:gitgutter_sign_added = '✚'
+    let g:gitgutter_sign_modified = '➜'
+    let g:gitgutter_sign_removed = '✘'
+'''
 
 [[plugins]] # Status line
 repo = 'itchyny/lightline.vim'
