--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -25,10 +25,8 @@ repo = 'Shougo/deoplete.nvim'
 if = 'has("nvim")'
 depends = ['context_filetype.vim']
 on_i = 1
-hook_add = '''
-	let g:deoplete#enable_at_startup = 1
-'''
 hook_source = '''
+	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#enable_smart_case = 1
 
 	" <TAB>: completion.
@@ -228,6 +226,9 @@ repo  = 'cespare/vim-toml'
 [[plugins]] # Zsh - 補完
 repo = 'zchee/deoplete-zsh'
 depends = ['deoplete.nvim']
+
+[[plugins]]
+repo = 'zplug/vim-zplug'
 
 # }}}
 # Command {{{
