--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -25,8 +25,7 @@ repo = 'Shougo/deoplete.nvim'
 if = 'has("nvim")'
 depends = ['context_filetype.vim']
 on_i = 1
-hook_source = '''
-	let g:deoplete#enable_at_startup = 1
+hook_add = '''
 	let g:deoplete#enable_smart_case = 1
 
 	" <TAB>: completion.
@@ -38,6 +37,9 @@ hook_source = '''
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
+'''
+hook_source = '''
+	let g:deoplete#enable_at_startup = 1
 '''
 
 # NERDTree {{{
