--- a/.config/dein/plugins.toml
+++ b/.config/dein/plugins.toml
@@ -26,6 +26,7 @@ if = 'has("nvim")'
 depends = ['context_filetype.vim']
 on_i = 1
 hook_add = '''
+	let g:deoplete#enable_at_startup = 1
 	let g:deoplete#enable_smart_case = 1
 
 	" <TAB>: completion.
@@ -37,9 +38,6 @@ hook_add = '''
 
 	" <S-TAB>: completion back.
 	inoremap <expr><S-TAB>  pumvisible() ? "\<C-p>" : "\<C-h>"
-'''
-hook_source = '''
-	let g:deoplete#enable_at_startup = 1
 '''
 
 # NERDTree {{{
@@ -115,7 +113,7 @@ repo = 'mattn/emmet-vim'
 on_i = 1
 hook_source = '''
 	let g:user_emmet_mode = 'i'
-	let g:user_emmet_leader_key='<C-E>'
+	let g:user_emmet_leader_key = '<C-E>'
 	let g:use_emmet_complete_tag = 1
 	let g:user_emmet_settings = {'variables':{'lang':"ja"}}
 '''
@@ -187,12 +185,7 @@ on_ft = ['typescript']
 ## Markdown {{{
 
 [[plugins]]
-repo = 'plasticboy/vim-markdown'
-on_ft = ['markdown']
-hook_source = '''
-	" 自動で折りたたまないようにする
-	let g:vim_markdown_folding_disabled = 1
-'''
+repo = 'rhysd/vim-gfm-syntax'
 
 [[plugins]] # Preview
 repo = 'kannokanno/previm'
@@ -215,6 +208,17 @@ on_ft = ['vim']
 repo = 'vim-jp/vimdoc-ja'
 
 ## }}}
+## {{{ zsh
+
+[[plugins]] # Zsh - 補完
+repo = 'zchee/deoplete-zsh'
+depends = ['deoplete.nvim']
+
+[[plugins]]
+repo = 'zplug/vim-zplug'
+
+## }}}
+
 
 [[plugins]] # amber
 repo = 'burner/amber.vim'
@@ -224,13 +228,6 @@ repo = 'tmux-plugins/vim-tmux'
 
 [[plugins]] # Toml
 repo  = 'cespare/vim-toml'
-
-[[plugins]] # Zsh - 補完
-repo = 'zchee/deoplete-zsh'
-depends = ['deoplete.nvim']
-
-[[plugins]]
-repo = 'zplug/vim-zplug'
 
 # }}}
 # Command {{{
